fixed navbar overlap and removed 'goal view' header

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,3 +19,4 @@ $warning: #EDE281;
 //stay at the bottom
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
+body { padding-top: 70px; }
